# holonic

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  STYLE_GUIDE.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: DECISIONS.md  INSTRUCTIONS.md  MIGRATION.md  SPEC-objections.md  SPEC.md  SPEC.ttl  backends.md  index.md  projections.md
docs/source/: api.md  backends.md  conf.py  demo.md  dom-comparison.md  index.md  ontology.md  projections.md
docs/source/_static/: .gitignore
docs/source/user_guide/: index.md
docs/source/user_guide/how_tos/: knowledge.rst
docs/source/user_guide/tutorials/: data.rst
jupyterlite/: environment.yml  jupyter_lite_config.json  requirements.txt
jupyterlite/content/: 00_start_here.ipynb  01_holon_basics.ipynb  02_portal_traversal.ipynb  03_cco_to_schemaorg.ipynb  03_projections.ipynb  04_cco_to_schemaorg.ipynb  05_governed_boundaries.ipynb  06_console_views.ipynb  06_holon_subtypes.ipynb  07_graph_metadata.ipynb  08_scope_resolution.ipynb  09_console_views.ipynb  09_projection_plugins.ipynb  10_projection_plugins.ipynb  11_dispatch_patterns.ipynb  12_holarchy_viz.ipynb  13_visualization.ipynb
notebooks/: 00_index.ipynb  01_holon_basics.ipynb  02_portal_traversal.ipynb  03_cco_to_schemaorg.ipynb  03_gra_interop.ipynb  03_projections.ipynb  04_cco_to_schemaorg.ipynb  04_projections.ipynb  05_governed_boundaries.ipynb  05_holarchy_viz.ipynb  05_holarchy_viz.py  06_holon_subtypes.ipynb  07_graph_metadata.ipynb  08_scope_resolution.ipynb  09_console_views.ipynb  10_dispatch_patterns.ipynb  10_projection_plugins.ipynb  11_dispatch_patterns.ipynb  11_visualization.ipynb  12_holarchy_viz.ipynb  13_visualization.ipynb  City Translation.ipynb  Engineering Portal.ipynb  Holon Visuals.ipynb  environment.yml  generators.py  requirements.txt
notebooks/deix_holonic/: 01_hypergraph_foundations.ipynb  02_tool_to_deix_pipeline.ipynb  03_digital_thread_as_role.ipynb  DEIX_Ontology.owl  README.md
scripts/: build_docs_apidoc.py  build_landing.py  check_notebooks.py  spec_compliance_check.py  sync_notebooks_to_jlite.py  test_notebooks.py
src/holonic/: __init__.py  _metadata.py  _version.py  client.py  console_model.py  holarchy.py  holon.py  membrane.py  model.py  namespaces.py  plugins.py  portal.py  projections.py  provenance.py  scope.py  sparql.py  surface.py
src/holonic/backends/: __init__.py  _fuseki_client.py  fuseki_backend.py  protocol.py  rdflib_backend.py  store.py
src/holonic/cli/: __init__.py  migrate_registry.py
src/holonic/ontology/: __init__.py  cga-shapes-v0.3.0.ttl  cga-shapes.ttl  cga-v0.3.0.ttl  cga.ttl
src/holonic/rdf_gen/: README.md  __init__.py  engine.py  loaders.py  namespaces.py  queries.py
src/holonic/rdf_gen/ontologies/: gen.ttl
src/holonic/rdf_gen/shapes/: gen_shapes.ttl
src/holonic/test/: __init__.py  conftest.py  test_audit.py  test_audit_remediation.py  test_backend.py  test_client_projections.py  test_console_methods.py  test_console_model.py  test_deprecation_and_dispatch.py  test_holon.py  test_lifecycle.py  test_membrane.py  test_metadata.py  test_ontology.py  test_plugins.py  test_portal.py  test_projections.py  test_scope.py  test_typed_graphs.py  test_verified_gaps.py
src/holonic/viz/: __init__.py  formatters.py  graph_builder.py  projections.py  provenance.py  styles.py  widgets.py
