[build-system]
build-backend = "flit_core.buildapi"
requires = [
  "flit-core>=3.7.1,<4",
]

[project]
name = "holonic"
version = "0.2.1"
description = "Graph-native holonic RDF systems"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Zach Welz", email = "welz.zach@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "rdflib>=7.0",
    "pyshacl>=0.25",
    "pydantic>=2.0",
]

[project.optional-dependencies]
fuseki = [
    "aiohttp>=3.9",
]
entailment = [
    "owlrl>=6.0",
]
viz = [
    "yfiles-jupyter-graphs>=1.7",
    "ipywidgets>=8.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "myst-parser",
]
notebooks = [
    "jupytext>=1.16",
    "jupyter",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "holonic[fuseki,entailment,viz,docs,notebooks]",
]
lint = [
  "mypy",
  "pyproject-fmt>=2.5",
  "ruff>=0.6",
  "ssort>=0.12",
]
test = [
  "pytest",
  "pytest-cov",
  "pytest-html",
  "pytest-json-report",
  "pytest-xdist",
]


[tool.flit.sdist]
exclude = [
  ".gitignore",
]

[tool.ruff]
line-length = 100
cache-dir = "build/.ruff_cache"

format.docstring-code-line-length = 100
lint.select = [
  "D",
  "E",
  "F",
  "I",
  "PLE",
  "PLW",
  "UP",
]
lint.ignore = [
  "D105",
]
lint.per-file-ignores."src/holonic/test/__*.py" = [
  "D",
]
lint.per-file-ignores."src/holonic/test/test*.py" = [
  "D",
]
lint.pydocstyle.convention = "google"

[tool.pytest.ini_options]
junit_family = "xunit2"
cache_dir = "build/.pytest_cache"
addopts = [
  "--pyargs",
  "holonic",
  # for contributors
  "--cov-report=term-missing:skip-covered",
  "--color=yes",
  # for review
  "--html=build/reports/pytest.html",
  "--self-contained-html",
  "--cov-report=html:build/reports/htmlcov",
  "--cov-report=xml:build/reports/coverage.xml",
  "--cov-context=test",
  # coverage
  "--cov=holonic",
  "--no-cov-on-fail",
  # for robots
  "--junitxml=build/reports/pytest.xunit.xml",
  "--json-report",
  # misc
  "-vv",
  "--ff",
]

[tool.coverage.run]
data_file = "build/reports/.coverage"
omit = [
  "*/test/test*.py",
  "*/holonic/utils.py",
]

[tool.coverage.html]
show_contexts = true

[tool.coverage.paths]
holonic = [
  "src/holonic",
  "*/src/holonic",
]

[tool.coverage.report]
exclude_also = [
  "raise NotImplementedError*",
  "except LookupError",
  "except RuntimeError",
  "raise TypeError",
  "except TypeError",
]

[tool.mypy]
# broken by ipywidgetsplugins = "pydantic.mypy"
cache_dir = "build/.mypy_cache"
sqlite_cache = true
python_version = "3.11"
allow_redefinition = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true
disable_error_code = "type-abstract"
# disallow_any_unimported = true
#exclude = [
#  "^.+/holonic/test.+\\.py$",
#]

[[tool.mypy.overrides]]
module = [
  "importlib.metadata",
]
ignore_missing_imports = true
