[build-system]
build-backend = "flit_core.buildapi"
requires = [
  "flit-core>=3.7.1,<4",
]

[project]
name = "holonic"
version = "0.3.0"
description = "Graph-native holonic RDF systems"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Zach Welz", email = "welz.zach@gmail.com" },
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pydantic>=2",
  "pyshacl>=0.25",
  "rdflib>=7",
]
optional-dependencies.dev = [
  "holonic[docs,entailment,fuseki,notebooks,viz]",
  "pytest>=8",
  "pytest-cov",
  "ruff",
]
optional-dependencies.docs = [
  "myst-parser",
  "sphinx>=7",
  "sphinx-autodoc-typehints",
  "sphinx-rtd-theme",
]
optional-dependencies.entailment = [
  "owlrl>=6",
]
optional-dependencies.fuseki = [
  "aiohttp>=3.9",
]
optional-dependencies.lint = [
  "mypy",
  "pyproject-fmt>=2.5",
  "ruff>=0.6",
  "ssort>=0.12",
]
optional-dependencies.notebooks = [
  "jupyter",
  "jupytext>=1.16",
]
optional-dependencies.test = [
  "pytest",
  "pytest-cov",
  "pytest-html",
  "pytest-json-report",
  "pytest-xdist",
]
optional-dependencies.viz = [
  "ipywidgets>=8",
  "yfiles-jupyter-graphs>=1.7",
]

[tool.flit]
sdist.exclude = [
  ".gitignore",
]

[tool.ruff]
line-length = 100
cache-dir = "build/.ruff_cache"
format.docstring-code-line-length = 100
lint.select = [
  "D",
  "E",
  "F",
  "I",
  "PLE",
  "PLW",
  "UP",
]
lint.ignore = [
  "D105",
  "D107",
  "D205",
]
lint.per-file-ignores."src/holonic/test/__*.py" = [
  "D",
]
lint.per-file-ignores."src/holonic/test/test*.py" = [
  "D",
]
lint.pydocstyle.convention = "google"

[tool.mypy]
# broken by ipywidgetsplugins = "pydantic.mypy"
cache_dir = "build/.mypy_cache"
sqlite_cache = true
python_version = "3.11"
allow_redefinition = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true
disable_error_code = "type-abstract"
overrides = [
  # disallow_any_unimported = true
  # exclude = [
  #  "^.+/holonic/test.+\\.py$",
  # ]
  { module = [
    "importlib.metadata",
  ], ignore_missing_imports = true },
]

[tool.pytest]
ini_options.junit_family = "xunit2"
ini_options.cache_dir = "build/.pytest_cache"
ini_options.addopts = [
  "--pyargs",
  "holonic",
  # for contributors
  "--cov-report=term-missing:skip-covered",
  "--color=yes",
  # for review
  "--html=build/reports/pytest.html",
  "--self-contained-html",
  "--cov-report=html:build/reports/htmlcov",
  "--cov-report=xml:build/reports/coverage.xml",
  "--cov-context=test",
  # coverage
  "--cov=holonic",
  "--no-cov-on-fail",
  # for robots
  "--junitxml=build/reports/pytest.xunit.xml",
  "--json-report",
  # misc
  "-vv",
  "--ff",
]

[tool.coverage]
run.data_file = "build/reports/.coverage"
run.omit = [
  "*/holonic/utils.py",
  "*/test/test*.py",
]
paths.holonic = [
  "src/holonic",
  "*/src/holonic",
]
report.exclude_also = [
  "except LookupError",
  "except RuntimeError",
  "except TypeError",
  "raise NotImplementedError*",
  "raise TypeError",
]
html.show_contexts = true
